additional Controller(학생 유무, 시간표 등록유무), N+1( findStudentExist), EntityCascade, testCase(update Class, Optional.get exist)